--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,10 +1,6 @@
 fixtures:
   repositories:
-    concat:
-      repo: 'git://github.com/puppetlabs/puppetlabs-concat.git'
-      ref: '1.1.0'
-    stdlib:
-      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
-      ref: '4.1.0'
+    concat: 'git://github.com/puppetlabs/puppetlabs-concat.git'
+    stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
   symlinks:
     dhcp: "#{source_dir}"
