--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,9 @@
-# Default .gitignore for Ruby
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-# Vim
-*.swp
-
-# OS X
-.DS_Store
-
-# Puppet
-coverage/
-spec/fixtures/modules/*
+pkg/
 Gemfile.lock
+vendor/
 spec/fixtures/
+.vagrant/
+.bundle/
+coverage/
+.idea/
+*.iml
