--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -69,5 +69,11 @@ Style/MultilineBlockLayout:
   Enabled: False
 
 # Rspec
+
+# We don't use rspec in this way
 RSpec/DescribeClass:
+  Enabled: False
+
+# Example length is not necessarily an indicator of code quality
+RSpec/ExampleLength:
   Enabled: False
