--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,4 +1,4 @@
 fixtures:
   repositories:
-    concat: 'git://github.com/puppetlabs/puppetlabs-concat.git'
-    stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+    concat: https://github.com/puppetlabs/puppetlabs-concat.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
